add descriptin and install nodemon

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socailmedia",
   "version": "1.0.0",
-  "description": "",
+  "description": "Social media project",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
