--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "joi": "^14.3.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.7"
   },
   "devDependencies": {
