--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.9.7"
+    "mongoose": "^5.9.7",
+    "nodemailer": "^6.4.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
